--- a/boutique.html
+++ b/boutique.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Boutique | OVERRUN</title>
+    <link rel="icon" type="image/png" href="logo.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -60,4 +61,5 @@
         &copy; 2026 OVERRUN RPG - Développé par Ryan.
     </footer>
 </body>
+
 </html>
