--- a/compte.html
+++ b/compte.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Mon Profil | OVERRUN</title>
+    <link rel="icon" type="image/png" href="logo.png">
     <link rel="stylesheet" href="style.css">
     <style>
         .admin-panel { background: rgba(255, 0, 0, 0.1); border: 2px solid #ff4d4d; padding: 20px; border-radius: 15px; margin-top: 30px; }
@@ -143,4 +144,5 @@
         };
     </script>
 </body>
+
 </html>
