--- a/discussion.html
+++ b/discussion.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Discussion | OVERRUN</title>
+    <link rel="icon" type="image/png" href="logo.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -94,4 +95,5 @@
     </div>
 
 </body>
+
 </html>
