--- a/overrun-details.html
+++ b/overrun-details.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>L'Épopée Overrun | Histoire du Jeu</title>
+    <link rel="icon" type="image/png" href="logo.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -47,4 +48,5 @@
         </div>
     </div>
 </body>
+
 </html>
