--- a/roadmap.html
+++ b/roadmap.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Roadmap | OVERRUN RPG</title>
+    <link rel="icon" type="image/png" href="logo.png">
     <link rel="stylesheet" href="style.css">
     <style>
         .progress-container { margin-bottom: 30px; }
@@ -63,4 +64,5 @@
         </div>
     </div>
 </body>
+
 </html>
