--- a/boutique.html
+++ b/boutique.html
@@ -100,7 +100,7 @@
                 <div class="card-body">
                     <h3>Overrun: Origins</h3>
                     <span class="price">GRATUIT</span>
-                    <a href="https://gamryan.itch.io/overrun-rpg" target="_blank" class="btn-buy">TÉLÉCHARGER</a>
+                    <a href="https://gamryan.itch.io/overrun-rpg" target="_blank" class="btn-buy">ACHETER</a>
                 </div>
             </div>
 
@@ -132,3 +132,4 @@
     </footer>
 </body>
 </html>
+
